# simple-kbs

./: .dockerignore  Cargo.toml  Dockerfile.kbs-db  Dockerfile.simple-kbs  README.md  build.rs  db-mysql.sql  db-postgres.sql  db-sqlite.sql  db.postgres.sql  db.sql  default_policy.json  docker-compose.yml  kbs-db-config.toml  sev_attest_test.db
.github/workflows/: build_test.yml  build_test_postgres.yml  build_test_sqlite.yml
client/: LaunchVM.py  make_grpc.sh  requirements.txt  sev_guest.xml
db/: db-postgres.sql  initial-data.sql
src/: crypto.rs  db.rs  main.rs  policy.rs  request.rs  sev_tools.rs
src/grpc/: mod.rs
src/grpc/proto/: keybroker.proto
tools/: calculate_sev_launch_digest.py  run_local_tests.sh
