[package]
name = "simple-kbs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.5"
prost = "0.8"
anyhow = "1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
sev = { version = "1.0.0", features = ["openssl"] }
codicon = "3.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
lazy_static = "1.4.0"
clap = "3.0.13"
log = "0.4.14"
env_logger = "0.9.0"
ring = "0.16.20"
rand = "0.8.5"
hex = "0.4.3"
sqlx = { version="0.5", features = [ "runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any" ] }
async-trait = "0.1.56"
regex = "1"
aes-gcm = "0.9.4"

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
tonic-build = "0.5"
